Fixed dark mode statblock background

--- a/css/StatblockWizardLogger.css
+++ b/css/StatblockWizardLogger.css
@@ -3,6 +3,7 @@
 :root {
     --fore: #020202;
     --back: #fdfdfd;
+    --statblockback: #ffffff;
     --alternateback: #dfdfdf;
     --key: #a00000;
     --link: #4f4f4f;
@@ -13,6 +14,7 @@
     :root {
         --fore: #fdfdfd;
         --back: #404040;
+        --statblockback: #7f7f7f;
         --alternateback: #020202;
         --key: #d00000;
         --link: #afafaf;
@@ -122,6 +124,10 @@ input[disabled] {
 /* fix because adding a div breaks the StatblockWizard css */
 .StatblockWizard-sectionheader+div>.StatblockWizard-line {
     margin-top: 2px;
+}
+/* fix because dark mode makes transparent statblocks look bad */
+.StatblockWizard-Transparent {
+    background-color: var(--statblockback);
 }
 
 /* scrollbar control */
